# bina-review

./: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: bina-check.yml
bina/: cli.py
bina/core/: baseline.py  config.py  engine.py  models.py  registry.py
bina/integrations/: github_reporter.py
bina/python/: parser.py
bina/python/rules/: __init__.py  best_practices.py  logic.py  naming.py
docs/: configuration.md  custom_rules.md  rules.md
